<resources>
    <string name="app_name">Ecommerce Concept</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_location">Zihuatanejo, Gro</string>
    <string name="categoryHeaderText">Select Category</string>
    <string name="viewAllText">view all</string>
    <string name="searchText">Search</string>
    <string name="bestSellerHeaderText">Best Seller</string>
    <string name="hotSalesHeaderText">Hot sales</string>
    <string name="iconNewText">New</string>
    <string name="buyNowButtonText">Buy now!</string>
    <string name="seeMore">see more</string>
    <string name="homeScreenMenuTitle">Explorer</string>
    <string name="phonesBtnText">Phones</string>
    <string name="computersBtnText">Computer</string>
    <string name="healthBtnText">Health</string>
    <string name="booksBtnText">Books</string>
    <string name="addToCartButtonText">Add to cart %1$s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="checkoutBtnText">Checkout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="my_cart">My Cart</string>
    <string name="add_address">Add address</string>
    <string name="product_details">Product Details</string>

</resources>