<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.homescreen.Home">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_location"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintEnd_toStartOf="@id/locationText"
        app:layout_constraintTop_toTopOf="@id/locationText"
        app:layout_constraintBottom_toBottomOf="@id/locationText"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:text="@string/user_location"
        android:textSize="@dimen/textsize"
        android:textColor="#010035"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/locationSpinnerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_spinner"
        android:layout_marginStart="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/locationText"
        app:layout_constraintTop_toTopOf="@id/locationText"
        app:layout_constraintBottom_toBottomOf="@id/locationText" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/filterIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_filter"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/locationText"
        app:layout_constraintBottom_toBottomOf="@id/locationText"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationText"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:text="@string/categoryHeaderText"
        android:textSize="@dimen/headerTextsize"
        android:textColor="#010035"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/categoryHeader"
        android:textSize="@dimen/textsize"
        android:text="@string/viewAllText"
        android:textColor="#FF6E4E"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/categoryHeader"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/double_margin"
        android:layout_marginEnd="@dimen/double_margin"
        android:layout_marginTop="@dimen/double_margin"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/searchText"
        app:layout_constraintTop_toTopOf="@id/qrBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/qrBackground"
        app:layout_constraintBottom_toBottomOf="@id/qrBackground"
        android:layout_marginEnd="@dimen/double_margin"
        android:layout_marginStart="@dimen/double_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:drawableStart="@drawable/ic_search"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/qrBackground"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/oval"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories"
        android:layout_marginTop="@dimen/double_margin"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/qrIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_qr"
        app:layout_constraintStart_toStartOf="@id/qrBackground"
        app:layout_constraintEnd_toEndOf="@id/qrBackground"
        app:layout_constraintTop_toTopOf="@id/qrBackground"
        app:layout_constraintBottom_toBottomOf="@id/qrBackground"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hotSalesHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchInput"
        android:text="@string/hotSalesHeaderText"
        android:textSize="@dimen/headerTextsize"
        android:textColor="#010035"
        android:layout_marginTop="@dimen/double_margin"
        android:layout_marginStart="@dimen/double_margin"/>
    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/hoeSalesPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hotSalesHeader"/>

</androidx.constraintlayout.widget.ConstraintLayout>